[package]
name = "rust-test"
version = "0.1.0"
authors = ["Mabry Cervin <mabry.cervin@gmail.com>"]
include = ["static/"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
futures = "0.3"
rand = "0.8.4"
